<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ADD_CLOSE_BUTTON_BOOLEAN_PREF_KEY">ADD_CLOSE_BUTTON_BOOLEAN_PREF_KEY</string>
    <string name="NOTIFICATION_IMPORTANCE_PREF_KEY">NOTIFICATION_IMPORTANCE_PREF_KEY</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="active">Active screen orientation controlling</string>
    <string name="ad">ad</string>
    <string name="add_close_button">Add a button to the notification for stopping the service</string>
    <string name="allow">Allow</string>
    <string name="an_error_occure_try_again_later">Error. Please try again later.</string>
    <string name="an_error_occure_while_try_to_get_product_details">An error occurred while the app was trying to get the product details.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_dont_have_draw_over_others_permission">The app does not have \"display over other apps\" permission. The application can not work without this permission</string>
    <string name="app_name">Control Screen Orientation</string>
    <string name="app_theme">App theme</string>
    <string name="auto">Sensor orientation</string>
    <string name="automatic_start_after_reboot">Automatic start after reboot</string>
    <string name="billing_service_unavailable">Billing service is unavailable .Please make sure that you are signed in Google play and have the last version of Google play services.</string>
    <string name="buy">Buy</string>
    <string name="buy_full_version">Buy the full version</string>
    <string name="cancel">Cancel</string>
    <string name="clear">clear</string>
    <string name="close_image_description">Stops the service. The user can enable/disable this button from the application settings</string>
    <string name="complete_via">Complete via</string>
    <string name="connection_failed">Connection failed.</string>
    <string name="copy">Copy</string>
    <string name="dark">Dark</string>
    <string name="default_p">Default</string>
    <string name="display_notification">Display notification</string>
    <string name="do_not_show_again">Do not show this again</string>
    <string name="do_you_want_stop_service">Do you want to stop \" Control Screen Orientation \" service?</string>
    <string name="do_you_want_to_remove_quick_start_note">Do you want to remove the notification?</string>
    <string name="don_not_remove_note_when_stop">Do not remove the notification after stopping the service</string>
    <string name="download">Download</string>
    <string name="enable_quick_setting_tile">Enable quick settings tile</string>
    <string name="enable_quick_setting_tile_description">Allow the user to add a tile to the quick settings (if the device supports this feature)</string>
    <string name="enabling_quick_settings_help">Quick settings tile</string>
    <string name="error">Error</string>
    <string name="error_code">Error code</string>
    <string name="expand_button_title">Advanced</string>
    <string name="feature_not_supported">Feature not supported. Please make sure that you have the last version of Google play services.</string>
    <string name="full_version_succsfully_activated">The full version has been successfully activated.</string>
    <string name="general">GENERAL</string>
    <string name="height">High</string>
    <string name="help">Help</string>
    <string name="instead_of">instead of</string>
    <string name="land_scape">Landscape</string>
    <string name="landscape_discription">"Landscape orientation: 
Holds the screen in a landscape orientation: that is, with the display wider than it is tall, ignoring sensor data"</string>
    <string name="later">Later</string>
    <string name="license_details">Licenses</string>
    <string name="light">Light</string>
    <string name="low">Low</string>
    <string name="main_notification_channel_name">Control screen orientation</string>
    <string name="max">Maximum</string>
    <string name="mini">Minimum</string>
    <string name="no_app_suitable_for_completing_this_action">There is no suitable app for completing this action.</string>
    <string name="no_draw_permission_start_failed">Starting the service has been failed. The application needs \"display over other apps\" permission. Please allow permission then try again.</string>
    <string name="not_set">Not set</string>
    <string name="notification_priorty">Notification priority</string>
    <string name="notification_settings">Notification settings</string>
    <string name="ok">OK</string>
    <string name="open_source_licenses">Open-source licenses</string>
    <string name="opening_draw_over_other_app_settings_failed">The app can not open settings. Please allow the required permission from your device settings.</string>
    <string name="oreo_notification_settings_notice">Please note that the system may arrange the notifications according to their importance.</string>
    <string name="permission_denied_error">Error, permission denied</string>
    <string name="pleas_notice_removing_notification">"Please notice: If you disable notification, the possibility of killing the application's service by the system ( in case of low memory) will increase"</string>
    <string name="please_wait">Please wait....</string>
    <string name="portrat">Portrait</string>
    <string name="portrate_discription">"Portrait orientation: 
Holds the screen in a portrait orientation: that is, with the display taller than it is wide, ignoring sensor data."</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="price">Price</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="purchase_cancelled">Purchase cancelled</string>
    <string name="purchase_pendding">Purchase pending</string>
    <string name="purchse_success">Purchase successful.</string>
    <string name="r_land_scape">Reverse landscape</string>
    <string name="r_landscape_discription">"Reverse landscape orientation: 
Holds the screen in landscape orientation, turned in the opposite direction from normal landscape."</string>
    <string name="r_portrate_discription">"Reverse portrait orientation: 
Holds the screen in portrait orientation, turned in the opposite direction from normal portrait."</string>
    <string name="rate_app">Rate this app</string>
    <string name="reverse_portrate">Reverse portrait</string>
    <string name="s_landscape_discription">"Sensor landscape orientation: 
Holds the screen in landscape orientation, but can use the sensor to change which direction the screen is facing."</string>
    <string name="s_portrate_discription">"Sensor portrait orientation: 
Holds the screen in portrait orientation, but can use the sensor to change which direction the screen is facing"</string>
    <string name="search_menu_title">Search</string>
    <string name="select_app_theme">Select App Theme</string>
    <string name="select_screen_orientation">Select screen orientation</string>
    <string name="sensoor_land">Sensor landscape</string>
    <string name="sensoor_portarte">Sensor portrait</string>
    <string name="sensor_discription">"Sensor orientation: 
Orientation is determined by a physical orientation sensor: the display will rotate based on how the user moves the device. This allows any of the 4 possible rotations, regardless of what the device will normally do (for example some devices won't normally use 180 degree rotation)."</string>
    <string name="service_disconnected">Service has been disconnected. Please try again later.</string>
    <string name="service_stopped_permission_denied">Service stopped. Permission denied</string>
    <string name="service_time_out">Service time out.Please try again later</string>
    <string name="settings">SETTINGS</string>
    <string name="share_this_app">Share this app</string>
    <string name="share_via">Share via</string>
    <string name="show_as_notification_pref_key">show_as_notification_pref_key</string>
    <string name="start_service">Start service</string>
    <string name="starting_service">Starting service</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stop_service">Stop service</string>
    <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="the_app_will_leave_note_for_quick_start">The app will leave a notification in the status bar. The user can use this notification to start the service</string>
    <string name="then_drag_app_tile_as_below">"Then hold and drag the app's tile."</string>
    <string name="this_feature_is_locked">This feature is locked. You must buy the full version to unlock this feature.</string>
    <string name="to_enable_quick_setting_tile">To enable quick settings tile: TURN ON the Enable quick settings tile switch FROM THE APP ( you may need to restart your device) -> Open your device quick settings -> Tap edit as in the below image</string>
    <string name="try_again_later">Try again later</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgrade_to_full_version">Upgrade to the full version to unlock all locked features.</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
    <string name="version">Version</string>
    <string name="warrning">Please note</string>
    <string name="would_rate_app">Would you like to rate this app on Google play?</string>
    <string name="you_already_have_full_version">You already have the full version.</string>
    <string name="you_already_have_full_version_activated">you already have the full version. The full version has been restored.</string>
</resources>
