<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="horizontal"
    android:background="#ff555555"
    android:paddingLeft="5.0dip"
    android:paddingRight="5.0dip"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageButton
        android:id="@id/landscape_img_button"
        android:background="@drawable/close_background"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="0.0dip"
        android:layout_height="64.0dip"
        android:src="@drawable/landscapet"
        android:scaleType="centerInside"
        android:layout_weight="1.0"
        android:contentDescription="@string/land_scape" />
    <ImageButton
        android:id="@id/r_landscape_img_button"
        android:background="@drawable/close_background"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="0.0dip"
        android:layout_height="64.0dip"
        android:src="@drawable/r_landscape"
        android:scaleType="centerInside"
        android:layout_weight="1.0"
        android:contentDescription="@string/r_land_scape" />
    <ImageButton
        android:id="@id/sensor_landscape_img_button"
        android:background="@drawable/close_background"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="0.0dip"
        android:layout_height="64.0dip"
        android:src="@drawable/sensor_land"
        android:scaleType="centerInside"
        android:layout_weight="1.0"
        android:contentDescription="@string/sensoor_land" />
    <ImageButton
        android:id="@id/portrate_img_button"
        android:background="@drawable/close_background"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="0.0dip"
        android:layout_height="64.0dip"
        android:src="@drawable/portrait"
        android:scaleType="centerInside"
        android:layout_weight="1.0"
        android:contentDescription="@string/portrat" />
    <ImageButton
        android:id="@id/r_portrate_img_button"
        android:background="@drawable/close_background"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="0.0dip"
        android:layout_height="64.0dip"
        android:src="@drawable/r_portrate"
        android:scaleType="centerInside"
        android:layout_weight="1.0"
        android:contentDescription="@string/reverse_portrate" />
    <ImageButton
        android:id="@id/sensor_portrate_img_button"
        android:background="@drawable/close_background"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="0.0dip"
        android:layout_height="64.0dip"
        android:src="@drawable/sensor_portrait"
        android:scaleType="centerInside"
        android:layout_weight="1.0"
        android:contentDescription="@string/sensoor_portarte" />
    <ImageButton
        android:id="@id/sensor_img_button"
        android:background="@drawable/close_background"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="0.0dip"
        android:layout_height="64.0dip"
        android:src="@drawable/sensor"
        android:scaleType="centerInside"
        android:layout_weight="1.0"
        android:contentDescription="@string/auto" />
    <ImageButton
        android:id="@id/stop_img_button"
        android:background="@drawable/close_background"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="0.0dip"
        android:layout_height="64.0dip"
        android:src="@drawable/close400"
        android:scaleType="centerInside"
        android:layout_weight="1.0"
        android:contentDescription="@string/stop_service" />
</LinearLayout>