<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minWidth="@dimen/dialog_mini_width"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:textColor="@color/txt_primary"
        android:id="@id/msg_txt"
        android:paddingLeft="16.0dip"
        android:paddingTop="16.0dip"
        android:paddingRight="16.0dip"
        android:paddingBottom="16.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_stop_service" />
    <LinearLayout
        android:gravity="end"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:onClick="on_ok"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:onClick="on_cancel"
            style="@style/Widget.AppCompat.Button.Borderless.Colored" />
    </LinearLayout>
</LinearLayout>