<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#ff555555"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/parent_ads_layout"
        android:background="#ff303030"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="12.0dip"
            android:textColor="#ffffffff"
            android:id="@id/details_txt"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.0dip"
            android:layout_marginTop="3.0dip"
            android:layout_marginRight="0.0dip"
            android:layout_marginBottom="10.0dip"
            android:text="               \n"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ads_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ads_txt"
            app:layout_constraintVertical_bias="0.5" />
        <TextView
            android:textSize="15.0dip"
            android:textStyle="bold"
            android:textColor="#ffffffff"
            android:id="@id/title_txt"
            android:paddingLeft="10.0dip"
            android:paddingTop="3.0dip"
            android:paddingRight="10.0dip"
            android:paddingBottom="10.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.0dip"
            android:layout_marginRight="0.0dip"
            android:text="        "
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ads_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ads_txt"
            app:layout_constraintVertical_bias="0.5" />
        <TextView
            android:textSize="9.0dip"
            android:textColor="#ffffffff"
            android:id="@id/ads_txt"
            android:paddingLeft="3.0dip"
            android:paddingRight="3.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:textSize="12.0dip"
            android:textColor="#ffffffff"
            android:id="@id/ads_button"
            android:background="@drawable/background_for_green_button"
            android:paddingLeft="12.0dip"
            android:paddingTop="8.0dip"
            android:paddingRight="12.0dip"
            android:paddingBottom="8.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginBottom="5.0dip"
            android:minWidth="100.0dip"
            android:minHeight="30.0dip"
            android:text="@string/download"
            android:drawableLeft="@drawable/download"
            android:drawablePadding="10.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableStart="@drawable/download"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:background="@color/activity_normal_background"
        android:paddingTop="16.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0">
        <RadioGroup
            android:id="@id/radioGroup1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="10.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:textSize="@dimen/font_size"
                android:id="@id/sensor_radio0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/auto" />
            <RadioButton
                android:textSize="@dimen/font_size"
                android:id="@id/land_radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/land_scape" />
            <RadioButton
                android:textSize="@dimen/font_size"
                android:id="@id/r_land_radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_land_scape" />
            <RadioButton
                android:textSize="@dimen/font_size"
                android:id="@id/s_land_radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensoor_land" />
            <RadioButton
                android:textSize="@dimen/font_size"
                android:id="@id/protrat_radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portrat" />
            <RadioButton
                android:textSize="@dimen/font_size"
                android:id="@id/r_portrat_radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reverse_portrate" />
            <RadioButton
                android:textSize="@dimen/font_size"
                android:id="@id/s_portrat_radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sensoor_portarte" />
        </RadioGroup>
    </ScrollView>
</LinearLayout>