<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/txt_primary"
            android:id="@id/version_text_view"
            android:background="?selectableItemBackground"
            android:padding="16.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/version" />
        <ImageView
            android:background="@color/sec_line"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip" />
        <TextView
            android:textColor="@color/txt_primary"
            android:id="@id/licenses_txt"
            android:background="?selectableItemBackground"
            android:padding="16.0dip"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/license_details"
            android:onClick="on_licenses" />
        <ImageView
            android:background="@color/sec_line"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip" />
        <TextView
            android:textColor="@color/txt_primary"
            android:background="?selectableItemBackground"
            android:padding="16.0dip"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:onClick="on_privacy" />
        <ImageView
            android:background="@color/sec_line"
            android:layout_width="fill_parent"
            android:layout_height="1.0dip" />
        <TextView
            android:textColor="@color/txt_primary"
            android:background="?selectableItemBackground"
            android:padding="16.0dip"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_of_service"
            android:onClick="on_terms" />
    </LinearLayout>
</ScrollView>